fix overflow

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -57,6 +57,7 @@ header {
   position: relative;
   width: 100%;
   height: calc(100vh - 70px);
+  overflow: hidden;
 
   .card {
     position: absolute;
